--- a/sass/_base.sass
+++ b/sass/_base.sass
@@ -79,8 +79,8 @@ $corFundoScroll: $cinzaEscuro
 // ------------------------------------------------------------------
 
 //@import url(http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:200,300,400)
-@import fonts/mf-player/style.css
-@import fonts/antonio/stylesheet.css
+//@import fonts/mf-player/style.css
+//@import fonts/antonio/stylesheet.css
 
 
 @mixin fontIcon
@@ -197,8 +197,6 @@ input, button, select, textarea
 input
 	+border-radius(5px)
 
-
-
 input, input[type="text"], select, textarea, .ms-parent > button
 	+border-radius(5px)
 	+box-sizing(border-box)
@@ -212,7 +210,7 @@ input, input[type="text"], select, textarea, .ms-parent > button
 	text-indent: 0
 	color: $preto
 	width: 100%
-	min-height: 35px
+	min-height: 40px
 	line-height: 35px
 
 	&:focus
