--- a/sass/_modal.sass
+++ b/sass/_modal.sass
@@ -111,9 +111,11 @@
 		a.md-close
 			position: absolute
 			+fontIcon
-			font-size: 40px
-			width: 40px
-			height: 40px
+			font-size: 35px
+			line-height: 40px
+			width: 35px
+			height: 35px
+			padding: 2px
 			margin-top: -20px
 			right: 10px
 			top: 50%
