--- a/fonts/mf-player/ie7/ie7.css
+++ b/fonts/mf-player/ie7/ie7.css
@@ -1,3 +1,9 @@
+.mficon-flag-en {
+	*zoom: expression(this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe65b;');
+}
+.mficon-flag-br {
+	*zoom: expression(this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe65c;');
+}
 .mficon-mf-sound-on {
 	*zoom: expression(this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe653;');
 }
