--- a/sass/_modal.sass
+++ b/sass/_modal.sass
@@ -137,61 +137,23 @@
 			text-align: center
 
 
-.md-show.md-effect ~
-	.container
-		height: 100%
-		overflow: hidden
-	.md-overlay
-		-webkit-transition: all 0.5s
-		-moz-transition: all 0.5s
-		transition: all 0.5s
-	.container, .md-overlay
-		-webkit-transform-style: preserve-3d
-		-webkit-transform-origin: 50% 100%
-		-webkit-animation: OpenTop 0.5s forwards ease-in
-		-moz-transform-style: preserve-3d
-		-moz-transform-origin: 50% 100%
-		-moz-animation: OpenTop 0.5s forwards ease-in
-		transform-style: preserve-3d
-		transform-origin: 50% 100%
-		animation: OpenTop 0.5s forwards ease-in
-
-
-
-@-webkit-keyframes OpenTop
-	50%
-		-webkit-transform: rotateX(10deg)
-		-webkit-animation-timing-function: ease-out
-
-
-@-moz-keyframes OpenTop
-	50%
-		-moz-transform: rotateX(10deg)
-		-moz-animation-timing-function: ease-out
-
-
-@keyframes OpenTop
-	50%
-		transform: rotateX(10deg)
-		animation-timing-function: ease-out
-
-
 .md-effect .md-content
-	-webkit-transform: translateY(-200%)
-	-moz-transform: translateY(-200%)
-	-ms-transform: translateY(-200%)
-	transform: translateY(-200%)
+	-webkit-transform: scale(2)
+	-moz-transform: scale(2)
+	-ms-transform: scale(2)
+	transform: scale(2)
 	opacity: 0
+	-webkit-transition: all 0.3s
+	-moz-transition: all 0.3s
+	transition: all 0.3s
 
 .md-show.md-effect .md-content
-	-webkit-transform: translateY(0)
-	-moz-transform: translateY(0)
-	-ms-transform: translateY(0)
-	transform: translateY(0)
+	-webkit-transform: scale(1)
+	-moz-transform: scale(1)
+	-ms-transform: scale(1)
+	transform: scale(1)
 	opacity: 1
-	-webkit-transition: all 0.5s 0.1s
-	-moz-transition: all 0.5s 0.1s
-	transition: all 0.5s 0.1s
+
 
 @media screen and (max-width: 32em)
 	body
