bug de z-index e pointer-events arrumado

--- a/sass/_base.sass
+++ b/sass/_base.sass
@@ -79,8 +79,8 @@ $corFundoScroll: $cinzaEscuro
 // ------------------------------------------------------------------
 
 //@import url(http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:200,300,400)
-//@import fonts/mf-player/style.css
-//@import fonts/antonio/stylesheet.css
+@import fonts/mf-player/style.css
+@import fonts/antonio/stylesheet.css
 
 
 @mixin fontIcon
