--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url(fonts/mf-player/style.css);
+@import url(fonts/antonio/stylesheet.css);
 /* line 17, ../../../../../.rvm/gems/ruby-1.9.3-p286/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video { margin: 0; padding: 0; border: 0; font: inherit; font-size: 100%; vertical-align: baseline; }
 
@@ -1343,47 +1345,47 @@ html.no-ie input[type="radio"]:checked { background: #68ff40 url(img/form-radio-
 .container { min-height: 100%; }
 
 /* line 15, sass/_modal.sass */
-.md-modal { position: fixed; top: 50%; left: 50%; width: 50%; max-width: 700px; min-width: 480px; height: auto; z-index: 2000; visibility: hidden; -webkit-backface-visibility: hidden; -moz-backface-visibility: hidden; backface-visibility: hidden; -webkit-transform: translateX(-50%) translateY(-50%); -moz-transform: translateX(-50%) translateY(-50%); -ms-transform: translateX(-50%) translateY(-50%); transform: translateX(-50%) translateY(-50%); }
-/* line 33, sass/_modal.sass */
+.md-modal { position: fixed; top: 50%; left: 50%; width: 50%; max-width: 700px; min-width: 480px; height: auto; z-index: 2000; visibility: hidden; -webkit-backface-visibility: hidden; -moz-backface-visibility: hidden; backface-visibility: hidden; -webkit-transform: translateX(-50%) translateY(-50%); -moz-transform: translateX(-50%) translateY(-50%); -ms-transform: translateX(-50%) translateY(-50%); transform: translateX(-50%) translateY(-50%); pointer-events: none; }
+/* line 34, sass/_modal.sass */
 .md-modal.md-scroll { top: 110px; bottom: 110px; left: 250px; right: 250px; z-index: 2000; -webkit-transform: translate(0, 0); -moz-transform: translate(0, 0); -ms-transform: translate(0, 0); -o-transform: translate(0, 0); transform: translate(0, 0); width: auto; max-width: none; }
-/* line 44, sass/_modal.sass */
+/* line 45, sass/_modal.sass */
 .md-modal.md-scroll .md-content { top: 0; bottom: 0; left: 0; right: 0; position: absolute; }
-/* line 51, sass/_modal.sass */
+/* line 52, sass/_modal.sass */
 .md-modal.md-scroll .md-content > header { height: 40px; }
-/* line 54, sass/_modal.sass */
+/* line 55, sass/_modal.sass */
 .md-modal.md-scroll .md-content > .content { padding: 10px 20px; position: absolute; top: 60px; left: 0; right: 0; bottom: 10px; height: auto !important; }
 
-/* line 64, sass/_modal.sass */
-.md-show { visibility: visible; }
+/* line 65, sass/_modal.sass */
+.md-show { visibility: visible; pointer-events: all; }
 
-/* line 67, sass/_modal.sass */
+/* line 69, sass/_modal.sass */
 .md-overlay { position: fixed; width: 100%; height: 100%; visibility: hidden; top: 0; left: 0; z-index: 1000; opacity: 0; background: rgba(143, 27, 15, 0.8); -webkit-transition: all 0.3s; -moz-transition: all 0.3s; transition: all 0.3s; background: rgba(0, 0, 0, 0.5); }
 
-/* line 82, sass/_modal.sass */
+/* line 84, sass/_modal.sass */
 .md-show ~ .md-overlay { opacity: 1; visibility: visible; }
 
-/* line 86, sass/_modal.sass */
+/* line 88, sass/_modal.sass */
 .md-content { color: white; background: rgba(0, 0, 0, 0.6); position: relative; -webkit-border-radius: 10px; -moz-border-radius: 10px; -ms-border-radius: 10px; -o-border-radius: 10px; border-radius: 10px; position: relative; margin: 0 auto; }
-/* line 94, sass/_modal.sass */
+/* line 96, sass/_modal.sass */
 .md-content > header { background: rgba(42, 133, 17, 0.7); -webkit-border-radius: 10px 10px 0 0; -moz-border-radius: 10px 10px 0 0; -ms-border-radius: 10px 10px 0 0; -o-border-radius: 10px 10px 0 0; border-radius: 10px 10px 0 0; padding: 10px 60px; position: relative; height: auto; }
-/* line 100, sass/_modal.sass */
+/* line 102, sass/_modal.sass */
 .md-content > header h1 { text-align: center; text-transform: uppercase; margin: 0; line-height: 40px; font-size: 26px; display: block; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
-/* line 111, sass/_modal.sass */
+/* line 113, sass/_modal.sass */
 .md-content > header a.md-close { position: absolute; font-family: "mf-player"; speak: none; font-style: normal; font-weight: normal; font-variant: normal; text-transform: none; line-height: 1; /* Better Font Rendering =========== */ -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; font-size: 35px; line-height: 40px; width: 35px; height: 35px; padding: 2px; margin-top: -20px; right: 10px; top: 50%; color: rgba(0, 0, 0, 0.5); }
-/* line 123, sass/_modal.sass */
+/* line 125, sass/_modal.sass */
 .md-content > header a.md-close:hover { color: #f7f7f7; }
-/* line 127, sass/_modal.sass */
+/* line 129, sass/_modal.sass */
 .md-content > .content { padding: 30px; margin: 0; overflow: auto; position: relative; height: auto; }
-/* line 134, sass/_modal.sass */
+/* line 136, sass/_modal.sass */
 .md-content > .content > h1 { font-family: "antoniolight"; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; font-size: 26px; text-align: center; }
 
-/* line 140, sass/_modal.sass */
+/* line 142, sass/_modal.sass */
 .md-effect .md-content { -webkit-transform: scale(2); -moz-transform: scale(2); -ms-transform: scale(2); transform: scale(2); opacity: 0; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; transition: all 0.3s; }
 
-/* line 150, sass/_modal.sass */
+/* line 152, sass/_modal.sass */
 .md-show.md-effect .md-content { -webkit-transform: scale(1); -moz-transform: scale(1); -ms-transform: scale(1); transform: scale(1); opacity: 1; }
 
-@media screen and (max-width: 32em) { /* line 159, sass/_modal.sass */
+@media screen and (max-width: 32em) { /* line 161, sass/_modal.sass */
   body { font-size: 75%; } }
 /* line 6, sass/_layout.sass */
 #pano { position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: url(img/temp/pano2.jpg) center center no-repeat; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; z-index: -1; }
@@ -1956,49 +1958,49 @@ html.no-ie input[type="radio"]:checked { background: #68ff40 url(img/form-radio-
 .cluster.positionTest { position: fixed; top: 45%; left: 45%; z-index: 2; }
 
 /* line 1458, sass/_layout.sass */
-.tagBox { position: relative; display: block; }
-/* line 1462, sass/_layout.sass */
+.tagBox { position: relative; display: block; z-index: 3; }
+/* line 1463, sass/_layout.sass */
 .tagBox .tagBt { background: url(img/tag.png) top center no-repeat; width: 50px; height: 50px; display: block; opacity: 0.8; }
-/* line 1469, sass/_layout.sass */
+/* line 1470, sass/_layout.sass */
 .tagBox .tagBt:hover { -webkit-transform: scale(1.2, 1.2); -moz-transform: scale(1.2, 1.2); -ms-transform: scale(1.2, 1.2); -o-transform: scale(1.2, 1.2); transform: scale(1.2, 1.2); opacity: 1; }
-/* line 1473, sass/_layout.sass */
+/* line 1474, sass/_layout.sass */
 .tagBox .profile { background: rgba(0, 0, 0, 0.7); display: block; padding: 10px; -webkit-border-radius: 10px; -moz-border-radius: 10px; -ms-border-radius: 10px; -o-border-radius: 10px; border-radius: 10px; width: 300px; -webkit-box-shadow: rgba(0, 0, 0, 0.4) 0 0px 0 10px; -moz-box-shadow: rgba(0, 0, 0, 0.4) 0 0px 0 10px; box-shadow: rgba(0, 0, 0, 0.4) 0 0px 0 10px; -webkit-transition-property: all; -moz-transition-property: all; -ms-transition-property: all; -o-transition-property: all; transition-property: all; -webkit-transition-duration: 0.3s; -moz-transition-duration: 0.3s; -ms-transition-duration: 0.3s; -o-transition-duration: 0.3s; transition-duration: 0.3s; overflow: hidden; *zoom: 1; position: absolute; overflow: visible; bottom: 90px; left: -145px; -webkit-transform: scale(2, 2); -moz-transform: scale(2, 2); -ms-transform: scale(2, 2); -o-transform: scale(2, 2); transform: scale(2, 2); opacity: 0; visibility: hidden; pointer-events: none; }
-/* line 1491, sass/_layout.sass */
+/* line 1492, sass/_layout.sass */
 .tagBox .profile:after { position: absolute; bottom: -30px; left: 50%; margin-left: -10px; content: ""; width: 0; height: 0; border-left: 20px solid transparent; border-right: 20px solid transparent; border-top: 20px solid rgba(0, 0, 0, 0.4); }
-/* line 1503, sass/_layout.sass */
+/* line 1504, sass/_layout.sass */
 .tagBox .profile.active { -webkit-transform: scale(1, 1); -moz-transform: scale(1, 1); -ms-transform: scale(1, 1); -o-transform: scale(1, 1); transform: scale(1, 1); opacity: 1; visibility: visible; pointer-events: all; }
-/* line 1509, sass/_layout.sass */
+/* line 1510, sass/_layout.sass */
 .tagBox .profile * { color: #f7f7f7; }
-/* line 1512, sass/_layout.sass */
+/* line 1513, sass/_layout.sass */
 .tagBox .profile header { display: block; overflow: hidden; *zoom: 1; }
-/* line 1516, sass/_layout.sass */
+/* line 1517, sass/_layout.sass */
 .tagBox .profile header img { width: 100px; height: 100px; margin-right: 10px; display: block; float: left; -webkit-border-radius: 5px; -moz-border-radius: 5px; -ms-border-radius: 5px; -o-border-radius: 5px; border-radius: 5px; }
-/* line 1524, sass/_layout.sass */
+/* line 1525, sass/_layout.sass */
 .tagBox .profile header > div { display: block; float: left; height: 100px; width: 190px; position: relative; }
-/* line 1531, sass/_layout.sass */
+/* line 1532, sass/_layout.sass */
 .tagBox .profile header > div h1 { font-size: 20px; margin-bottom: 10px; }
-/* line 1535, sass/_layout.sass */
+/* line 1536, sass/_layout.sass */
 .tagBox .profile header > div .profile-fb { font-family: "antoniobold"; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; padding: 8px 20px 12px 20px; font-size: 20px; line-height: 20px; text-decoration: none; border: none; text-transform: uppercase; text-align: center; color: white; background: #2a8511; cursor: pointer; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; -webkit-border-radius: 5px; -moz-border-radius: 5px; -ms-border-radius: 5px; -o-border-radius: 5px; border-radius: 5px; -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0 -5px 0 inset; -moz-box-shadow: rgba(0, 0, 0, 0.1) 0 -5px 0 inset; box-shadow: rgba(0, 0, 0, 0.1) 0 -5px 0 inset; -webkit-transition-property: all; -moz-transition-property: all; -ms-transition-property: all; -o-transition-property: all; transition-property: all; -webkit-transition-duration: 0.3s; -moz-transition-duration: 0.3s; -ms-transition-duration: 0.3s; -o-transition-duration: 0.3s; transition-duration: 0.3s; opacity: 0.9; overflow: hidden; *zoom: 1; display: block; float: none; background: #3b579d; font-size: 16px; line-height: 16px; padding: 6px 10px 10px 10px; position: absolute; left: 0; right: 0; bottom: 0; }
 /* line 243, sass/_base.sass */
 .tagBox .profile header > div .profile-fb:hover { -webkit-box-shadow: rgba(0, 0, 0, 0.3) 0 -5px 0 inset; -moz-box-shadow: rgba(0, 0, 0, 0.3) 0 -5px 0 inset; box-shadow: rgba(0, 0, 0, 0.3) 0 -5px 0 inset; opacity: 1; }
-/* line 1549, sass/_layout.sass */
-.tagBox .profile .quote { font-size: 14px; font-style: italic; font-family: georgia; max-width: 350px; margin-top: 10px; margin-bottom: 0; }
-/* line 1557, sass/_layout.sass */
+/* line 1550, sass/_layout.sass */
+.tagBox .profile .quote { font-size: 14px; font-style: italic; font-family: georgia; font-weight: bold; max-width: 350px; margin-top: 10px; margin-bottom: 0; }
+/* line 1559, sass/_layout.sass */
 .tagBox .profile nav.user { display: block; width: 100%; margin-top: 10px; overflow: hidden; *zoom: 1; }
-/* line 1563, sass/_layout.sass */
+/* line 1565, sass/_layout.sass */
 .tagBox .profile nav.user a { display: block; float: left; width: 32%; height: 30px; background: black; margin-left: 2%; text-align: center; line-height: 30px; -webkit-border-radius: 5px; -moz-border-radius: 5px; -ms-border-radius: 5px; -o-border-radius: 5px; border-radius: 5px; opacity: 0.6; }
-/* line 1575, sass/_layout.sass */
+/* line 1577, sass/_layout.sass */
 .tagBox .profile nav.user a:first-child { margin-left: 0; }
-/* line 1578, sass/_layout.sass */
+/* line 1580, sass/_layout.sass */
 .tagBox .profile nav.user a:hover { opacity: 1; }
-/* line 1581, sass/_layout.sass */
+/* line 1583, sass/_layout.sass */
 .tagBox .profile .bt-close { font-family: "mf-player"; speak: none; font-style: normal; font-weight: normal; font-variant: normal; text-transform: none; line-height: 1; /* Better Font Rendering =========== */ -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; width: 30px; height: 30px; padding: 5px; background: rgba(0, 0, 0, 0.7); display: block; position: absolute; top: -20px; right: -20px; pointer-events: all; z-index: 2; color: #f7f7f7; -webkit-border-radius: 50%; -moz-border-radius: 50%; -ms-border-radius: 50%; -o-border-radius: 50%; border-radius: 50%; font-size: 30px; }
-/* line 1596, sass/_layout.sass */
+/* line 1598, sass/_layout.sass */
 .tagBox .profile .bt-close:hover { color: #68ff40; }
-/* line 1600, sass/_layout.sass */
+/* line 1602, sass/_layout.sass */
 .tagBox.positionTest { position: fixed; top: 65%; right: 25%; }
 
-/* line 1613, sass/_layout.sass */
+/* line 1615, sass/_layout.sass */
 #testes { position: fixed; display: block; width: 600px; left: 0; bottom: 0; z-index: 2000; background: rgba(131, 0, 0, 0.9); padding: 10px; height: auto; }
-/* line 1624, sass/_layout.sass */
+/* line 1626, sass/_layout.sass */
 #testes a { color: white; display: inline-block; padding: 10px; margin: 10px; background: rgba(0, 0, 0, 0.7); }
