--- a/sass/splash.sass
+++ b/sass/splash.sass
@@ -5,8 +5,9 @@
 	left: 0
 	bottom: 0
 	right: 0
-	background: url(img/splash/bg.jpg) right bottom no-repeat
+	background: url(img/splash/bg-estadio.jpg) right bottom no-repeat
 	z-index: 9997
+
 
 	.dot
 		position: fixed
@@ -14,5 +15,5 @@
 		left: 0
 		bottom: 0
 		right: 0
-		background: rgba(0,0,0,0.5) url(img/splash/dot.png) top left
+		background: rgba(0,0,0,0.2) url(img/splash/dot.png) top left
 		z-index: 1
