alteraçao no fluxo de marcacao do amigo2

--- a/sass/_layout.sass
+++ b/sass/_layout.sass
@@ -686,6 +686,11 @@ body .container
 					border-top: none
 					margin-top: 10px
 					
+					h1
+						font-size: 20px
+						color: $corTexto
+						margin: 20px 0 0 0
+
 					input, button
 						width: 340px
 						margin: 20px 0 0 0
