--- a/sass/_layout.sass
+++ b/sass/_layout.sass
@@ -505,7 +505,220 @@ body .container
 	right: 20px
 	background: url(img/temp/krControls2.png) bottom center no-repeat
 
+#viewTags
+	position: fixed
+	bottom: 280px
+	right: 80px
+	width: 40px
+	height: 110px
+	background: url(img/tagsOff.png) center center no-repeat
+
+	a
+		opacity: 0
+		background: url(img/tagsOn.png) center center no-repeat
+		display: block
+		height: 110px
+
+		&.active
+			opacity: 1
+
 #marcarWrapper
+	position: fixed
+	bottom: 00px
+	width: 120px
+	left: 50%
+	margin-left: -60px
+	height: 150px
+	+transition
+	background: url(img/marcarOnly-bt.png) center center no-repeat
+	z-index: 99
+
+	nav
+		a
+			display: block
+			width: 100px
+			height: 100px
+			cursor: pointer
+			opacity: 0
+			margin: 10px
+			background-position: center center
+			background-repeat: no-repeat
+			&.active
+				opacity: 1
+
+		a#bt-marcar
+			background-image: url(img/marcarOnly-btOn.png)
+
+	#marcarContent
+		position: fixed
+		top: 50%
+		left: 50%
+		max-width: 700px
+		min-width: 480px
+		height: auto
+		z-index: 2000
+		padding: 20px 20px 30px 20px
+		+border-radius(10px)
+		background: rgba($black, 0.7)
+		border: 5px solid rgba($branco, 0.1)
+		text-align: center
+		display: none
+		+translate(-50%, -50%)
+
+		.step
+			display: none
+			+clearfix
+			overflow: visible
+
+			header
+				text-align: center
+				position: relative
+				padding: 0 50px
+
+				& > a
+					+fontIcon
+					color: $corTexto
+					display: block
+					font-size: 35px
+					position: absolute
+					top: 0
+
+					&.bt-close
+						right: 0
+
+					&.bt-voltar
+						left: 0
+
+				h1
+					color: $corTexto
+					font-size: 30px
+					text-transform: uppercase
+					margin-bottom: 0
+
+			&.active
+				display: block
+
+			&.marcar-tipo
+				text-align: center
+				> a
+					+buttonFlat
+					float: none
+
+			&.marcar-time
+				text-align: center
+				> a
+					+buttonFlat
+					float: none
+					img
+						display: block
+						width: 50px
+						height: 50px
+						margin: 0 auto
+
+				form
+					display: block
+					border-top: 2px solid rgba($branco, 0.2)
+					padding: 0 70px
+					padding-top: 15px
+					h1
+						font-size: 20px
+						color: $corTexto
+					input
+						width: 240px
+						+border-radius(5px 0 0 5px)
+						display: block
+						float: left
+						border: 0
+						
+					button
+						+border-radius(0px 5px 5px 0)
+						width: 100px
+						display: block
+						float: left
+						margin: 0
+
+				.twitter-typeahead
+					display: block
+					float: left
+					width: 240px
+					.tt-dropdown-menu
+						padding: 0px
+						width: 338px
+						.tt-suggestion
+							padding: 5px 10px
+							margin-top: -1px
+							border-top: 1px solid $brancoCinza
+							+border-radius(5px)
+							&:hover, &.tt-is-under-cursor
+								background: $brancoCinza
+								color: $preto
+
+			&.marcar-amigo
+				form
+					border-top: none
+					margin-top: 10px
+					
+					h1
+						font-size: 20px
+						color: $corTexto
+						margin: 20px 0 0 0
+
+					input, button
+						width: 340px
+						margin: 20px 0 0 0
+						display: inline-block
+
+					button
+						+buttonFlat
+			
+			&.share-facebook
+				textarea
+					height: 40px
+					margin-top: 20px
+
+				header > h1
+					font-size: 28px
+
+				button
+					float: right
+
+				.preview
+					display: block
+					margin-top: 20px
+					+clearfix
+					text-align: left
+					border: 2px solid rgba($corPrincipal, 0.2)
+
+					h1
+						+fontLight
+						border-bottom: 2px solid rgba($branco, 0.1)
+						font-size: 17px
+						padding: 15px 0
+						background: $corBg
+						margin-bottom: 0
+						color: $corTexto
+
+					img
+						display: block
+						width: 120px
+						height: 120px
+						float: left
+						margin-right: 30px
+
+					p
+						display: block
+						padding-right: 30px
+						color: $cinzaClaro
+		&.show
+			display: block
+			+animate($name: fadeIn, $duration: 0.3s)	
+
+
+
+
+//marcar com snap
+
+//#marcarWrapper
 	position: fixed
 	bottom: 10px
 	width: 320px
@@ -1798,9 +2011,8 @@ body .container
 			margin-bottom: 0
 		a
 			display: inline-block
-			width: 200px
-			height: 100px				
-			margin: -10px -35px
+			width: 400px
+			height: 50px				
 			+scale(0.6)
 
 			&:hover
