botão ver vips + modal ver vips

--- a/sass/_layout.sass
+++ b/sass/_layout.sass
@@ -1086,7 +1086,7 @@ body .container
 				display: block
 				+animate(fadeIn)
 
-	&#modal-amigos
+	&#modal-amigos, &#modal-vips
 		header
 			padding-left: 20px
 			padding-right: 260px
