--- a/style.css
+++ b/style.css
@@ -1705,33 +1705,33 @@ body .container.show > * { -webkit-animation: fadeIn 0.5s 0.7s ease both; -moz-a
 /* line 1085, sass/_layout.sass */
 .md-modal .content .step.active { display: block; -webkit-animation: fadeIn 0.5s 0.1s ease both; -moz-animation: fadeIn 0.5s 0.1s ease both; -ms-animation: fadeIn 0.5s 0.1s ease both; -o-animation: fadeIn 0.5s 0.1s ease both; animation: fadeIn 0.5s 0.1s ease both; }
 /* line 1090, sass/_layout.sass */
-.md-modal#modal-amigos header { padding-left: 20px; padding-right: 260px; }
+.md-modal#modal-amigos header, .md-modal#modal-vips header { padding-left: 20px; padding-right: 260px; }
 /* line 1093, sass/_layout.sass */
-.md-modal#modal-amigos header h1 { text-align: left; }
+.md-modal#modal-amigos header h1, .md-modal#modal-vips header h1 { text-align: left; }
 /* line 1096, sass/_layout.sass */
-.md-modal#modal-amigos header form { position: absolute; display: block; right: 60px; top: 10px; height: 40px; width: 200px; }
+.md-modal#modal-amigos header form, .md-modal#modal-vips header form { position: absolute; display: block; right: 60px; top: 10px; height: 40px; width: 200px; }
 /* line 1104, sass/_layout.sass */
-.md-modal#modal-amigos header form * { display: inline-block; }
+.md-modal#modal-amigos header form *, .md-modal#modal-vips header form * { display: inline-block; }
 /* line 1107, sass/_layout.sass */
-.md-modal#modal-amigos header form input { -webkit-border-radius: 5px 0 0 5px; -moz-border-radius: 5px 0 0 5px; -ms-border-radius: 5px 0 0 5px; -o-border-radius: 5px 0 0 5px; border-radius: 5px 0 0 5px; width: 160px; float: left; display: block; }
+.md-modal#modal-amigos header form input, .md-modal#modal-vips header form input { -webkit-border-radius: 5px 0 0 5px; -moz-border-radius: 5px 0 0 5px; -ms-border-radius: 5px 0 0 5px; -o-border-radius: 5px 0 0 5px; border-radius: 5px 0 0 5px; width: 160px; float: left; display: block; }
 /* line 1113, sass/_layout.sass */
-.md-modal#modal-amigos header form button { -webkit-border-radius: 0 5px 5px 0; -moz-border-radius: 0 5px 5px 0; -ms-border-radius: 0 5px 5px 0; -o-border-radius: 0 5px 5px 0; border-radius: 0 5px 5px 0; font-family: "mf-player"; speak: none; font-style: normal; font-weight: normal; font-variant: normal; text-transform: none; line-height: 1; /* Better Font Rendering =========== */ -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; padding: 0; float: right; display: block; width: 40px; height: 40px; background: rgba(0, 0, 0, 0.7); color: #f7f7f7; margin: 0; }
+.md-modal#modal-amigos header form button, .md-modal#modal-vips header form button { -webkit-border-radius: 0 5px 5px 0; -moz-border-radius: 0 5px 5px 0; -ms-border-radius: 0 5px 5px 0; -o-border-radius: 0 5px 5px 0; border-radius: 0 5px 5px 0; font-family: "mf-player"; speak: none; font-style: normal; font-weight: normal; font-variant: normal; text-transform: none; line-height: 1; /* Better Font Rendering =========== */ -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; padding: 0; float: right; display: block; width: 40px; height: 40px; background: rgba(0, 0, 0, 0.7); color: #f7f7f7; margin: 0; }
 /* line 1125, sass/_layout.sass */
-.md-modal#modal-amigos .content { padding-top: 10px; padding-bottom: 10px; }
+.md-modal#modal-amigos .content, .md-modal#modal-vips .content { padding-top: 10px; padding-bottom: 10px; }
 /* line 1128, sass/_layout.sass */
-.md-modal#modal-amigos .content > nav { text-align: center; }
+.md-modal#modal-amigos .content > nav, .md-modal#modal-vips .content > nav { text-align: center; }
 /* line 1130, sass/_layout.sass */
-.md-modal#modal-amigos .content > nav a { display: inline-block; width: 150px; height: auto; position: relative; opacity: 0.5; -webkit-transition-property: all; -moz-transition-property: all; -o-transition-property: all; transition-property: all; -webkit-transition-duration: 0.3s; -moz-transition-duration: 0.3s; -o-transition-duration: 0.3s; transition-duration: 0.3s; background: black; }
+.md-modal#modal-amigos .content > nav a, .md-modal#modal-vips .content > nav a { display: inline-block; width: 150px; height: auto; position: relative; opacity: 0.5; -webkit-transition-property: all; -moz-transition-property: all; -o-transition-property: all; transition-property: all; -webkit-transition-duration: 0.3s; -moz-transition-duration: 0.3s; -o-transition-duration: 0.3s; transition-duration: 0.3s; background: black; }
 /* line 1139, sass/_layout.sass */
-.md-modal#modal-amigos .content > nav a img { width: 100%; display: block; filter: grayscale(100%); -webkit-filter: grayscale(100%); -moz-filter: grayscale(100%); -ms-filter: grayscale(100%); -o-filter: grayscale(100%); }
+.md-modal#modal-amigos .content > nav a img, .md-modal#modal-vips .content > nav a img { width: 100%; display: block; filter: grayscale(100%); -webkit-filter: grayscale(100%); -moz-filter: grayscale(100%); -ms-filter: grayscale(100%); -o-filter: grayscale(100%); }
 /* line 1144, sass/_layout.sass */
-.md-modal#modal-amigos .content > nav a h1 { font-family: "antoniolight"; padding: 10px; background: rgba(0, 0, 0, 0.6); position: absolute; bottom: 0; left: 0; right: 0; margin: 0; font-size: 14px; text-align: center; text-transform: uppercase; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; color: #f7f7f7; display: block; }
+.md-modal#modal-amigos .content > nav a h1, .md-modal#modal-vips .content > nav a h1 { font-family: "antoniolight"; padding: 10px; background: rgba(0, 0, 0, 0.6); position: absolute; bottom: 0; left: 0; right: 0; margin: 0; font-size: 14px; text-align: center; text-transform: uppercase; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; color: #f7f7f7; display: block; }
 /* line 1162, sass/_layout.sass */
-.md-modal#modal-amigos .content > nav a:hover { -webkit-transform: scale(1.2, 1.2); -moz-transform: scale(1.2, 1.2); -ms-transform: scale(1.2, 1.2); -o-transform: scale(1.2, 1.2); transform: scale(1.2, 1.2); opacity: 1; z-index: 2; }
+.md-modal#modal-amigos .content > nav a:hover, .md-modal#modal-vips .content > nav a:hover { -webkit-transform: scale(1.2, 1.2); -moz-transform: scale(1.2, 1.2); -ms-transform: scale(1.2, 1.2); -o-transform: scale(1.2, 1.2); transform: scale(1.2, 1.2); opacity: 1; z-index: 2; }
 /* line 1166, sass/_layout.sass */
-.md-modal#modal-amigos .content > nav a:hover img { filter: grayscale(0); -webkit-filter: grayscale(0); -moz-filter: grayscale(0); -ms-filter: grayscale(0); -o-filter: grayscale(0); }
+.md-modal#modal-amigos .content > nav a:hover img, .md-modal#modal-vips .content > nav a:hover img { filter: grayscale(0); -webkit-filter: grayscale(0); -moz-filter: grayscale(0); -ms-filter: grayscale(0); -o-filter: grayscale(0); }
 /* line 1168, sass/_layout.sass */
-.md-modal#modal-amigos.md-scroll .content { padding-left: 0; padding-right: 0; }
+.md-modal#modal-amigos.md-scroll .content, .md-modal#modal-vips.md-scroll .content { padding-left: 0; padding-right: 0; }
 /* line 1173, sass/_layout.sass */
 .md-modal#modal-share .content { height: 320px; display: block; }
 /* line 1178, sass/_layout.sass */
